// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render partial props should not render any data when no columns supplied 1`] = `
<div
  className="table-responsive mt-0"
>
  <table
    className="table rounded"
  >
    <tbody>
      <tr />
    </tbody>
  </table>
</div>
`;

exports[`render partial props should not render table at all 1`] = `null`;

exports[`render partial props should render data also for rows without the specified data path 1`] = `
<div
  className="table-responsive mt-0"
>
  <table
    className="table rounded"
  >
    <tbody>
      <tr>
        <td
          className="align-middle"
        >
          Label
        </td>
      </tr>
      <tr>
        <td
          className="align-middle"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`render with props should render a scrollable table 1`] = `
<div
  className="table-responsive mt-0 border-bottom scrollable"
>
  <table
    className="table rounded"
  >
    <tbody>
      <tr>
        <td
          className="align-middle"
        >
          Label
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`render with props should render a styled table 1`] = `
<div
  className="table-responsive mt-0"
>
  <table
    className="table rounded bg-default"
  >
    <tbody>
      <tr>
        <td
          className="align-middle"
        >
          Label
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`render without props should not render anything 1`] = `null`;
